<resources>
    <string name="app_name">Snap Reminder</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_reminder_detail">Details</string>
    <string name="facebook_app_id">295547444119582</string>
    <string name="title_activity_photo">Snap</string>
    <string name="typeface_bold">OpenSans-Bold.ttf</string>
    <string name="typeface_regular">OpenSans-Regular.ttf</string>
    <string name="title_activity_about_developer">Contact Developer</string>
    <string name="fb_login_protocol_scheme">fb295547444119582</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interval">interval</string>
    <string name="count">count</string>
    <string name="id">id</string>
    <string name="until">until</string>
    <string name="days_array">days_array</string>
    <string name="type">type</string>
    <string name="preference_id">REMINDER_NUMBER</string>
    <string name="preference_reminder_id">REM_NO</string>
    <string name="item_click_reminder_id">reminder_id</string>
    <string name="image_clickable">image_clickable</string>
    <string name="reminder_id_new">REM_NO</string>
    <string name="photo_path">path</string>
    <string name="reminder_no_photo">REM_NO_PHOTO</string>
    <string name="photo_file_name">photo_file_name</string>
    <string name="facebook_sync_dialog_title">Facebook Sync</string>
    <string name="facebook_dialog_message">Currently no facebook friend use this app. Please share this app and enjoy the service.</string>
    <string name="dialog_positive_title">Okay</string>
    <string name="birthday_suffix">\'s birthday</string>
    <string name="share_intent_prefix">Hey check out SnapReminder at: https://play.google.com/store/apps/details?id=</string>
    <string name="delete_reminder_dialog_title">Delete Reminder?</string>
    <string name="delete_reminder_positive">Delete</string>
    <string name="delete_reminder_snack_message">Reminder Deleted</string>
    <string name="delete_reminder_negative">Cancel</string>
    <string name="description_dialog_message">Description</string>
    <string name="description_dislog_positive">Done</string>
    <string name="description_dialog_negative">Cancel</string>
    <string name="positive_message">Done</string>
    <string name="negative_message">Cancel</string>
    <string name="set_date_first">Set Date First</string>
    <string name="date_passed_message">Date already passed, please set an appropriate date.</string>
    <string name="time_passed_message">Time already passed, please set an appropriate time.</string>
    <string name="until_date_passed">Until Date is set in past,please rectify.</string>
    <string name="set_time_firs">Set Time First</string>
    <string name="update_task_message">Update Task</string>
    <string name="date_label">Date:</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="time_label">Time:</string>
    <string name="time_default">HH-MM</string>
    <string name="repeat_label">Repeat:</string>
    <string name="repeat_default">None</string>
    <string name="repeat_checkbox_label">Repeat</string>
    <string name="tasks_checkbox_label">Tasks</string>
    <string name="desciption_label">Description</string>
    <string name="description">Description</string>
    <string name="add_task_label">+Add Item</string>
    <string name="date_card_default">Date</string>
    <string name="desc_widget_row">Descriptio...</string>
    <string name="date_widget_row">21 June 2016</string>
    <string name="time_widget_row">23:30</string>
    <string name="all_reminders">All Reminders</string>
    <string name="reminders_without_images">Reminders without Images</string>
    <string name="reminders_with_images">Reminders with Images</string>
    <string name="facebook_birthdays_sync">Facebook Birthdays Sync</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="communicate">Communicate</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="desc_extra">description_extra</string>
    <string name="reminder_image">Reminder Image</string>
    <string name="delete_reminder">Delete Reminder</string>
    <string name="cd_add_reminder">Add Reminder</string>
    <string name="cd_click_an_image_and_add_a_reminder">Click an Image and add a reminder</string>
    <string name="load_image_from_device_and_add_a_reminder">Load Image from Device and add a reminder</string>
    <string name="add_reminder_without_an_image">Add reminder without an image</string>
    <string name="cd_reminder_date">Reminder Date</string>
    <string name="cd_reminder_time">Reminder Time</string>
    <string name="do_you_want_to_repeat">Do you want to repeat?</string>
    <string name="cd_Add_tasks">Add tasks to this reminder</string>
    <string name="reminder_description">Reminder Description</string>
    <string name="add_task_item">Add task item</string>
    <string name="task_check">Task CheckBox</string>
    <string name="task_detail">Task Detail</string>
    <string name="cancel_task">Cancel Task</string>
    <string name="no_reminder">No Reminders Added</string>
</resources>
