<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/reminders"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/all_reminders"
            />


        <item
            android:id="@+id/wo_image_reminder"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/reminders_without_images" />

        <item
            android:id="@+id/image_reminder"
            android:icon="@drawable/ic_add_a_photo_black_24dp"
            android:title="@string/reminders_with_images" />
        <item
            android:id="@+id/facebook"
            android:icon="@drawable/ic_group_add_black_24dp"
            android:title="@string/facebook_birthdays_sync" />


    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/suggest"
                android:icon="@drawable/ic_call_black_24dp"
                android:title="@string/contact_developer" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_send_black_24dp"
                android:title="@string/share" />
            <item
                android:id="@+id/rate_us"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:title="@string/rate_us" />
        </menu>
    </item>

</menu>
