<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:weightSum="3">

    <TextView
        android:id="@+id/widget_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/reminder_description"
        android:padding="10dp"
        android:textSize="20sp"
        tools:text="@string/desc_widget_row" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="end"
        android:weightSum="3">

        <TextView
            android:id="@+id/widget_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:contentDescription="@string/cd_reminder_date"
            android:padding="4dp"
            android:textSize="20sp"
            tools:text="@string/date_widget_row" />

        <TextView
            android:id="@+id/widget_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/cd_reminder_time"
            android:padding="4dp"
            android:textSize="20sp"
            tools:text="@string/time_widget_row" />

    </LinearLayout>
</LinearLayout>