<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="8dp"
        android:transitionName="image_transition">

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_card"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/reminder_image"
                android:scaleType="centerCrop"
                android:src="@drawable/reminder_footer" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@color/cards_text_bg"
                android:orientation="vertical">

                <com.bhaskar.snapreminder.model.TextViewCustom
                    android:id="@+id/desc_main_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/reminder_description"
                    android:padding="4dp"
                    android:text="@string/description"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white"
                    android:transitionName="desc_transition"
                    app:customFont="@string/typeface_regular" />

                <com.bhaskar.snapreminder.model.TextViewCustom
                    android:id="@+id/date_main_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cd_reminder_date"
                    android:padding="4dp"
                    android:text="@string/date_card_default"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white"
                    android:transitionName="date_transition"
                    app:customFont="@string/typeface_regular" />
            </LinearLayout>
        </FrameLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
